--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+svg.pip {
+    width: 60px;
+    height: 60px;
+}
+
+
+@media only screen and (max-width: 600px) {
+    svg.pip {
+        width: 15px;
+        height: 15px;
+    }
+}
