--- a/src/app/carta-card/carta-card.component.html
+++ b/src/app/carta-card/carta-card.component.html
@@ -1,10 +1,10 @@
 
 <div (click)="flipCard()" class="card carta-card">
     @if(card.isFlipped && card.face !== undefined){
-        <div class="corner start-corner is-size-3" [class]="'suit-' + card.suit">
+        <div class="kerkSucks value is-size-2-tablet is-size-5-mobile" [class]="'suit-' + card.suit">
             {{card.face}}
         </div>
-        <div class="center" [class]="'suit-' + card.suit">
+        <div class="kerkSucks" [class]="'suit-' + card.suit">
             @switch (card.suit){
                 @case (0) {
                     <lucide-angular [img]="SpadeIcon" class="pip"></lucide-angular>
@@ -19,9 +19,6 @@
                     <lucide-angular [img]="ClubIcon" class="pip"></lucide-angular>
                 }
             }
-        </div>
-        <div class="corner end-corner is-size-3" [class]="'suit-' + card.suit">
-            {{card.face}}
         </div>
     } @else {
         <div class="card-back">
